<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="com.qenndrimm.android.quizapp.MainActivity">

    <TextView
        android:id="@+id/a"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/question_five"
        android:textAppearance="?android:textAppearanceLarge"/>

    <ImageView
        android:contentDescription="@string/henry"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:src="@drawable/henry"/>
    
    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/question5" >

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/ques5ans1"
            android:text="@string/lionel_messi" />

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/ques5ans2"
            android:text="@string/adriano" />

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/ques5ans3"
            android:text="@string/cristiano_ronaldo" />

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/ques5ans4"
            android:text="@string/thierry_henry" />

    </RadioGroup>

    <Button
        android:onClick="checkAnswer5"
        android:text="@string/submit_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
</LinearLayout>