<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="com.qenndrimm.android.quizapp.MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/question_one"
        android:textAppearance="?android:textAppearanceLarge"/>

    <EditText
        android:id="@+id/answer1"
        android:hint="@string/answer_here"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:lines="5"/>

    <Button
        android:onClick="checkAnswer1"
        android:text="@string/submit_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
</LinearLayout>